	- Synced parser again.
	- Synced lexer.
	
Fri May  7 15:34:05 CEST 2004

	- Added portability file to pgtypeslib.
	- Fixed bug that reversed string length in typedefs.
	- Added additional test case.
	
Mon May 10 15:38:58 CEST 2004

	- Argh, just another bug in adjust_informix.
	- Added "extern C" flags for C++ compiler.

Fri May 21 15:17:35 CEST 2004
	
	- Fixed DEALLOCATE PREPARE to use correct function call
	- Made sure connect statement does not accept single char variable,
	  but only strings.
	  
Sat May 22 13:11:12 CEST 2004

	- Added pg_config_paths.h to ecpglib.
	
Thu Jun 17 13:50:06 CEST 2004

	- Added patch by ISHIDA Akio to allow indicators in execute
	  statements.
	  
Sun Jun 20 12:44:01 CEST 2004

	- Synced parser and keyword list.
	
Sun Jun 27 13:50:58 CEST 2004
	
	- Only use typedefs inside their scope.
	- Variables that are out of scope, were not removed all the time.
	- Make a varchar NULL set everything to 0 when not using indicators.
	- Synced parser.
	
Mon Jun 28 11:08:42 CEST 2004

	- Arrays can be read as arrays or as character strings now.
	
Wed Jun 30 16:56:32 CEST 2004

	- Added SET DESCRIPTOR command. 
	- Cleaned up error handling in preprocessor.
	
Sun Jul  4 16:53:53 CEST 2004

	- Made sure SET DESCRIPTOR accepts all data types including constants.
	- Some code cleanup.
	
Mon,  5 Jul 2004 10:41:54 +0200

	- Fixed indicator in SET DESCRIPTOR.
	- Added special handling of descriptor header information.
	- More code cleanup.
	
Mon Jul  5 20:50:09 CEST 2004

	- Added free() calls against memory leak in interval.c.
	
Tue Jul 20 09:15:21 CEST 2004

	- Synced parser and keyword list.
	- Fixed handling of cyclic defines.
	
Mon Jul 26 09:04:53 CEST 2004

	- SQL defines are only used in SQL space in Informix mode.
	
Mon Sep  6 13:17:46 CEST 2004

	- Fixed bug in Informix mode that caused a segfault.
	- Set pgtypes library version to 1.2.
	- Set ecpg version to 3.2.0.
	- Set compat library version to 1.2.
	- Set ecpg library version to 4.2.
